--- a/resources/fermentations/2019-08-24-fwsy-5050.md
+++ b/resources/fermentations/2019-08-24-fwsy-5050.md
@@ -32,26 +32,27 @@ Made at 00:30 before going to bed. Combined and let rest in room temperature
  {:type :yeast :amount 3}]
 :time 5
 :image-alt Dough before combining
-:image /images/bread/P8240228.jpg
+:section-type :media-back
+:image /vert-wide/images/bread/P8240228.jpg
 :body
 
 Hydrated and proofed the yeast in the warm water for a few minutes, until I
 combined it all to a paste, added it to the pre-ferment and combined everything
 using the [pincer method](https://www.youtube.com/watch?v=HoY7CPw0E1s).
 
-![Dough ready for bulk fermentation](/images/bread/P8240229.jpg)
-
 Gave the dough some stretches to develop it a little, and finished the mix with
 the dough at the target temperature of 28C.
 
-![Dough temperature](/images/bread/P8240231.jpg)
+--------------------------------------------------------------------------------
+:type :section
+:section-type :image
+:image-alt Dough temperature
+:image /images/bread/P8240231.jpg
 
 --------------------------------------------------------------------------------
 :type :section
 :title Bulk fermentation
 :time 240
-:image-alt Dough fermenting
-:image /images/bread/P8240235.jpg
 :body
 
 Bulk fermentation lasted for 4 hours in a 25C kitchen - pushing it. Stretches
@@ -59,10 +60,14 @@ and folds every 15 minutes, starting 30 minutes in. 4 in total.
 
 --------------------------------------------------------------------------------
 :type :section
+:section-type :image
+:image-alt Dough fermenting
+:image /images/bread/P8240235.jpg
+
+--------------------------------------------------------------------------------
+:type :section
 :title Shaping
 :time 65
-:image-alt Dough proof
-:image /images/bread/P8240236.jpg
 :body
 
 The dough was at its very peak, threatening to collapse as I pulled it out to
@@ -74,13 +79,23 @@ The second loaf went for 50 minutes in a 25C kitchen.
 
 --------------------------------------------------------------------------------
 :type :section
+:section-type :image
+:image-alt Dough proofing
+:image /images/bread/P8240236.jpg
+
+--------------------------------------------------------------------------------
+:type :section
 :title Baking
 :time 50
-:image-alt Baked loaf
-:image /images/bread/IMG_1555.jpg
 :body
 
 Baked in an oval dutch oven with lid for 30 minutes, then uncovered for 15
 minutes. All at 245C. Immediately after pulling the first loaf, I baked the
 second one from the fridge. It was a tinge over-proofed, but came out very nice
 all the same.
+
+--------------------------------------------------------------------------------
+:type :section
+:section-type :image
+:image-alt Baked loaf
+:image /images/bread/IMG_1555.jpg
